Author                 :Ruchi Pareek Description            :Fix for distorted css of login screen on logging out from Dashboard screen Files modified         :Dashboard.css,login.css, page1.html, index3.html

--- a/skillIndia/server/src/main/resources/static/css/login.css
+++ b/skillIndia/server/src/main/resources/static/css/login.css
@@ -26,6 +26,10 @@
     border-top-left-radius : 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    background-color: #fff;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    border: 1px solid transparent;
 } 
 .login-row{
 	margin-right:0px;
